# kono

./: Cargo.toml  build.rs
data/: kono-launch.desktop
src/: arguments.rs  main.rs  manifest.rs  paths.rs  runner.rs
src/gui/: mod.rs
src/gui/bridge/: main.rs  mod.rs
src/gui/qml/: dialog.qml  main.qml
src/qml/: main.qml
src/runner/: manifest.rs  mod.rs
