[package]
name = "kono"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
dialog = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
cxx = "1.0.121"
cxx-qt = "0.7.0"
cxx-qt-lib = { version = "0.7.0", features = ["qt_full",  "link_qt_object_files"] }
cxx-kde-frameworks = { git = "https://invent.kde.org/libraries/cxx-kde-frameworks.git" }

[build-dependencies]
cxx-qt-build = "0.7.0"
