[package]
name = "kono"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
cxx = "1.0.188"
cxx-qt = "0.7.3"
cxx-qt-lib = { version = "0.7.3", features = [
    "qt_full",
    "link_qt_object_files",
] }
cxx-kde-frameworks = { git = "https://invent.kde.org/libraries/cxx-kde-frameworks.git" }

[build-dependencies]
cxx-qt-build = "0.7.3"
